no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -151,15 +151,17 @@ QUAL VAR = VAL, ...               #Child of DECLARATION, type 'VariableDeclarati
                                   #  - kind 'var|let|const'
 
 PATTERN                           #Parent of IDENTIFIER, MEMBER_EXPR, OBJ_PATTERN, ARR_PATTERN, REST_ELEMENT,
-                                  #ASSIGNMENT_PATTERN, TS_PARAMETER_PROPERTY, PRIVATE_NAME
+                                  #ASSIGNMENT_PATTERN, TS_PARAMETER_PROPERTY, PRIVATE_IDENTIFIER
 
 VAR                               #Child of EXPR+PATTERN, type 'Identifier':
+                                  #  - name STR
+#VAR                              #Child of EXPR+PATTERN, type 'PrivateIdentifier'
                                   #  - name STR
 
 OBJ.VAR                           #Child of EXPR+PATTERN, type 'MemberExpression':
 OBJ[VAL]                          #  - object EXPR|SUPER (OBJ)
                                   #  - property EXPR (VAL) or IDENTIFIER (VAR)
-                              set|#    or PRIVATE_NAME (#VAR)
+                              set|#    or PRIVATE_IDENTIFIER (#VAR)
                                   #  - computed true (VAL) or false (VAR)
 OBJ?.VAR                    setmbl#On MEMBER_EXPRESSION:
 OBJ?.[VAL]                  setmbl#  - optional BOOL
@@ -239,7 +241,7 @@ new FUNC(...)                     #Child of EXPR, type 'NewExpression':
 
 @DECORATOR                     sae#On CLASS|METHOD_DEFINITION or
                            seatmbl#PROPERTY or
-                              sae##FIELD_DEFINITION:
+                              sae##PROPERTY_DEFINITION:
                                sae#  - decorators DECORATOR_ARR
                                sae#Type 'Decorator':
                                sae#  - expression EXPR
@@ -436,7 +438,7 @@ VAL == != === !== < <= > >= <<    #Child of EXPR, type 'BinaryExpression':
 instanceof VAL2                   #
 VAL |> VAL2                  (bl)*#    or '|>'
                                   #  - left EXPR
-                               (b)#    or PRIVATE_NAME (operator 'in' only)
+                               (b)#    or PRIVATE_IDENTIFIER (operator 'in' only)
                                   #  - right EXPR
 
 VAR = += -= *= /= **= %= <<= >>=  #Child of EXPR, type 'AssignmentExpression':
@@ -472,11 +474,11 @@ class [CLASS] [extends PARENT] {  #Type 'Class':
 }                                 #  - [superClass EXPR]
                                   #  - body CLASS_BODY
                                   #Type 'ClassBody':
-                                tb#  - body METHOD_DEFINITION|FIELD_DEFINITION_ARR
+                                tb#  - body METHOD_DEFINITION|PROPERTY_DEFINITION_ARR
                               (t)##  - body METHOD_DEFINITION|CLASS_PROPERTY_ARR
                               (b)##  - body CLASS_METHOD|CLASS_PROPERTY_ARR
                                  b#Type 'MethodDefinition':
-                                 b#  - key EXPR|PRIVATE_NAME
+                                 b#  - key EXPR|PRIVATE_IDENTIFIER
                                  b#  - value FUNCTION_EXPR
                                  b#  - kind 'constructor|method|get|set'
                                  b#  - static BOOL
@@ -484,15 +486,12 @@ class [CLASS] [extends PARENT] {  #Type 'Class':
                               (b)##Type 'Class[Private]Method' like METHOD_DEFINITION but:
                               (b)##  - child of FUNCTION_DECLARATION
                               (b)##  - no value
-  [static] VAR [= VAL]      setbl|#Type 'FieldDefinition'
+  [static] VAR [= VAL]      setbl|#Type 'PropertyDefinition'
                             (tbl)##or 'Class[Private]Property':
-                               se|#  - key EXPR|PRIVATE_NAME
+                               se|#  - key EXPR|PRIVATE_IDENTIFIER
                                se|#  - [value EXPR]
                                se|#  - static BOOL
                                se|#  - computed BOOL
-  #VAR|#FUNC()                set|#Child of EXPR+PATTERN, type 'PrivateName':
-                            setbl|#  - name STR
-                             (bl)##  - id IDENTIFIER
 class CLASS ... {}                #Child of CLASS+DECLARATION, type 'ClassDeclaration'
 class [CLASS] ... {}              #Child of CLASS+EXPR, type 'ClassExpression'
 
