no commit message

--- a/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
+++ b/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
@@ -929,6 +929,8 @@ tsc --jsx STR                     #Allows JSX.
                                   #Cannot use <TYPE>VAL (but can use "VAL as TYPE")
 tsc --jsxFactory STR              #'FUNC' (def: 'React.createElement') used with --jsx 'react'
 /* @jsx STR */                    #Useful when using an alternative library (e.g. Preact)
+tsc --jsxFragmentFactory STR
+/* @jsxFrag STR */                #'FUNC' (def: 'React.Fragment') used with --jsx 'react'
 
 TYPES ==>                         #
 React                             #NAMESPACE
