--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -8,7 +8,7 @@
 ALTERNATIVES ==>                  #  - typescript (preferred)
                                   #  - flow: very similar to TypeScript, a little less features, less focus on extending JavaScript, less high-profile
 
-VERSION ==>                       #3.9.6
+VERSION ==>                       #4.0.0-beta
 
 
                                              /=+===============================+=\
@@ -573,13 +573,14 @@ InstanceType<FUNC_TYPE>           #Same as ReturnType<> but for 'new FUNC'
 TYPE[]
 Array<TYPE>                       #Type of ARR of same TYPEs
 
-[..., ...ARR_TYPE]                #Spreads an ARR_TYPE
-                                  #Does not work with TUPLE
-
-[TYPE[?],...]                     #Type of ARR of different TYPEs ("tuple").
+[TYPE[?][: VAR],...]              #Type of ARR of different TYPEs ("tuple").
                                   #Each TYPE is only for that index.
+                                  #If named (VAR), all must be named. Name not used for type checking.
                                   #No missing value unless '?'
                                   #No additional values.
+
+[..., ...ARR_TYPE, ...]           #Spreads an ARR_TYPE.
+                                  #Can also be used in destructuring.
 
 
                                              /=+===============================+=\
