no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -1252,6 +1252,7 @@ TYPE                              #TYPE in @TAG can be either JSDoc TYPE or Type
 @typedef {TYPE} TYPE2
 @type {TYPE}
 @readonly
+@deprecated [COMMENT]
 @public|protected|private
 @enum [{TYPE}]
 @param [{TYPE}] VAR [- COMMENT]
