no commit message

--- a/Languages/Go/go.language.txt
+++ b/Languages/Go/go.language.txt
@@ -520,7 +520,8 @@ FUNC([MVAL])                      #Call a function
 
 
 struct                            #STRUCT_TYPE
- { [[VAR,...] TYPE [STR]];... }   #If VAR omitted ("embedded field"):
+ { [[VAR,...] TYPE [STR]];... }   #Ordered object whose keys are names and values any TYPE.
+                                  #If VAR omitted ("embedded field"):
                                   #  - default name is "TYPE"
                                   #     - if PACKAGE.TYPE, only "TYPE"
                                   #  - TYPE must be type name, not type literal
@@ -562,8 +563,11 @@ func (VAR3 TYPE3) FUNC(...)       #Method declaration.
                                   #  - can overload|re-declare functions, providing they have a different receiver (including none)
                                   #"Method set" is all methods of a specific receiver.
 
-interface { [FUNC(...) [...]];...}#INTERFACE_TYPE
-                                  #FUNC(...) [...] is like FUNC_TYPE but with a function name
+interface {                       #INTERFACE_TYPE
+  [FUNC(...) [...]];...           #FUNC(...) [...] is like FUNC_TYPE but with a function name
+  [INTERFACE_TYPE2];...           #If INTERFACE_TYPE2, include its methods ("embedded")
+}                                 #  - if some methods already exists, must exactly match
+                                  #  - cannot embed itself (including recursively)
                                   #Any TYPE can transtype to INTERFACE_TYPE providing it includes at least the same methods ("method set")
                                   #  - it wraps the underlying TYPE ("dynamic type"), i.e. acting as an abstraction type ("static type")
                                   #  - only INTERFACE.METHOD(...) can be used, unless transtyped to underlying TYPE
@@ -596,7 +600,8 @@ switch
 
 
 map[KTYPE]VTYPE                   #MAP_TYPE
-                                  #Object whose keys are KTYPE and values are VTYPE
+                                  #Unordered object whose keys are KTYPE and values are VTYPE
+                                  #KTYPE must allow ==, i.e. cannot be FUNC|MAP|SLICE
 
 nil                               #Zero-value.
                                   #Like empty MAP:
@@ -607,7 +612,8 @@ nil                               #Zero-value.
 
 map[KTYPE]VTYPE{ [VAL: VAL2],... }#Creates a MAP with some elements
 make(map[KTYPE]VTYPE[, UINT])->MAP#Creates an empty MAP.
-                                  #Pre-allocates space for UINT elements (only for performance optimization).
+                                  #Pre-allocates space for UINT elements
+                                  #  - only for performance optimization. Size grows dynamically.
 
 MAP[KVAL]                         #Get an element.
                                   #Return VAL, BOOL:
@@ -741,6 +747,8 @@ go FUNC(...)                      #Call a function but inside a new thread.
 
 
 chan TYPE                         #Pipe|FIFO with TYPE elements, meant for cross-thread communication
+chan <- TYPE
+<- chan TYPE                      #Same but only allows writing or reading
 
 nil                               #Zero-value.
                                   #Cannot read|write from it
