no commit message

--- a/Languages/Go/go.language.txt
+++ b/Languages/Go/go.language.txt
@@ -748,28 +748,31 @@ go FUNC(...)                      #Call a function but inside a new thread.
 
 chan TYPE                         #Pipe|FIFO with TYPE elements, meant for cross-thread communication
 chan <- TYPE
-<- chan TYPE                      #Same but only allows writing or reading
+<- chan TYPE                      #Same but only allows sending or receiving
 
 nil                               #Zero-value.
-                                  #Cannot read|write from it
+                                  #Receive|send block forever.
                                   #Length|capacity is 0
 
 make(chan TYPE[, UINT])->CHAN     #Creates a CHAN instance
-                                  #UINT is buffer size (def: 0)
+                                  #UINT is buffer size (def: 0, i.e. unbuffered)
 
-CHAN <- VAL                       #Push VAL to CHAN.
-                                  #If buffer full, blocks until it can push.
-                                  #  - if buffer size 0, blocks until it gets popped
-<-CHAN                            #Pop VAL from CHAN.
+CHAN <- VAL                       #Send VAL to CHAN (push).
+                                  #If unbuffered, blocks until it gets received.
+                                  #If buffered and buffer full, blocks until it can push.
+<-CHAN                            #Receive VAL from CHAN (pop).
                                   #Blocks until a VAL is available
                                   #Returns VAL, BOOL
                                   #  - BOOL is whether CHAN was closed
                                   #  - if CHAN closed, panic unless BOOL was retrieved
 
-close(CHAN)                       #Do not allow read|write anymore.
+close(CHAN)                       #Make receive|send noop:
+                                  #  - any buffered VAL is still received
+                                  #  - then receive returns VAL, true, where VAL is CHAN's TYPE zero-value
+                                  #Panic if CHAN is either receive-only, or nil
                                   #Automatically done at end of process. Only necessary when either:
                                   #  - using for VAL := range CHAN
-                                  #  - want read|write to fail
+                                  #  - want receive|send to fail
 
 for VAL := range CHAN { ... }     #Iterates unless CHAN closed
 
