no commit message

--- a/Languages/Go/go.language.txt
+++ b/Languages/Go/go.language.txt
@@ -301,6 +301,10 @@ bool                              #TYPE
 
 true|false                        #BOOL
 
+!BOOL
+BOOL && BOOL2
+BOOL || BOOL2                     #
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -362,7 +366,13 @@ INT|FLOAT2 [+|- INT|FLOATi]       #COMPLEX
 
 NUM                               #[U]INT|FLOAT|COMPLEX|RUNE|UINTPTR
 
--NUM                              #Negative
++NUM
+-NUM                              #
+
+NUM + - * / % NUM2                #
+
+NUM & | ^ &^ NUM2                 #Bitwise operations. &^ is
+^NUM                              #Invert bits
 
 UNDERSCORES ==>                   #Can appear to separate digits. Non-significant.
 
