no commit message

--- a/Languages/Go/go.language.txt
+++ b/Languages/Go/go.language.txt
@@ -851,8 +851,6 @@ append([]BYTE, STR...)->[]BYTE2   #If underlying ARR too small, creates a new on
                                              \=+===============================+=/
 
 
-PANIC ==>                         #Like an exception.
-
 defer FUNC(...)                   #Call a function:
                                   #  - right after return statement evaluated
                                   #     - can access named return variables, set to their return value
@@ -863,10 +861,33 @@ defer FUNC(...)                   #Call a function:
                                   #Last defer is executed first.
                                   #Purpose: like a try/catch/finally block.
 
+panic(VAL)                        #Trigger a "panic": like throwing an exception in other languages
+                                  #Each parent's deferred FUNC is called in order.
+                                  #By convention VAL:
+                                  #  - should not be nil, since it makes it confusing with recover()
+                                  #  - should be ERROR or "MESSAGE"
+                                  #When reaching top-level, aborts program and prints VAL + stack trace
+recover()->VAL|nil                #Stop current panic, and return the VAL passed to panic()
+                                  #Noop and returns nil if either:
+                                  #  - no panic
+                                  #  - not inside defer FUNC
+
 error                             #INTERFACE
                                   #Error TYPEs should be STRUCT implementing this INTERFACE
-                                  #Must be returned and tested != nil.
+                                  #Convention is either:
+                                  #  - returned as MVAL: VAL, ERROR|nil, to be tested by caller
+                                  #  - passed to panic()
 error.Error()->STR                #Serialize an ERROR
+
+runtime.Error                     #ERROR_INTERFACE
+                                  #Panicked by language runtime errors, such as:
+                                  #  - wrong operator for a given TYPE: STR.VAR, SLICE == SLICE2, ...
+                                  #  - some operations on nil: *nil, nil(), close(nil), ...
+                                  #  - out-of-bound: STR|ARR|SLICE[NUM], make(TYPE, -NUM)
+                                  #  - arithmetic error: NUM / 0, NUM << -NUM2
+                                  #  - invalid type assertion: VAL.(INTERFACE)
+                                  #  - closed CHAN: CHAN <- VAL after close(CHAN)
+runtime.RuntimeError()            #Noop, used only to differentiate INTERFACE
 
 
                                              /=+===============================+=\
