no commit message

--- a/Languages/Go/go.language.txt
+++ b/Languages/Go/go.language.txt
@@ -866,20 +866,29 @@ panic(VAL)                        #Trigger a "panic": like throwing an exception
                                   #By convention VAL:
                                   #  - should not be nil, since it makes it confusing with recover()
                                   #  - should be ERROR or "MESSAGE"
-                                  #When reaching top-level, aborts program and prints VAL + stack trace
+                                  #When reaching top-level:
+                                  #  - aborts program
+                                  #  - exit code 2
+                                  #  - prints:
+                                  #     - VAL
+                                  #     - stack trace of each goroutine
+                                  #        - if panic was recover()'d then re-panic(), include both original|new panic() in stack trace
+                                  #        - independent from the panic VAL
 recover()->VAL|nil                #Stop current panic, and return the VAL passed to panic()
                                   #Noop and returns nil if either:
                                   #  - no panic
                                   #  - not inside defer FUNC
 
-error                             #INTERFACE
-                                  #Error TYPEs should be STRUCT implementing this INTERFACE
-                                  #Convention is either:
-                                  #  - returned as MVAL: VAL, ERROR|nil, to be tested by caller
-                                  #  - passed to panic()
-error.Error()->STR                #Serialize an ERROR
+error                             #INTERFACE_TYPE
+                                  #By convention:
+                                  #  - Error TYPEs should be STRUCT implementing this INTERFACE
+                                  #  - either:
+                                  #     - returned as MVAL: VAL, ERROR|nil, to be tested by caller
+                                  #     - passed to panic(ERROR)
+ERROR.Error()->STR                #Serialize an ERROR
+ERROR.*Error()                    #By convention, a noop function with the error name is used to differentiate INTERFACE_TYPE
 
-runtime.Error                     #ERROR_INTERFACE
+runtime.Error                     #ERROR_INTERFACE_TYPE
                                   #Panicked by language runtime errors, such as:
                                   #  - wrong operator for a given TYPE: STR.VAR, SLICE == SLICE2, ...
                                   #  - some operations on nil: *nil, nil(), close(nil), ...
@@ -887,7 +896,7 @@ runtime.Error                     #ERROR_INTERFACE
                                   #  - arithmetic error: NUM / 0, NUM << -NUM2
                                   #  - invalid type assertion: VAL.(INTERFACE)
                                   #  - closed CHAN: CHAN <- VAL after close(CHAN)
-runtime.RuntimeError()            #Noop, used only to differentiate INTERFACE
+RUNTIME_ERROR.RuntimeError()      #
 
 
                                              /=+===============================+=\
@@ -958,3 +967,15 @@ for { select { ... } }            #Usually put in an infinite loop, and using re
 
 len(CHAN)->UINT                   #Number of buffered elements
 cap(CHAN)->UINT                   #Buffere size
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:             PRINT             :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+print[ln](VAL,...)                #Prints on stderr, space|newline-separated
+                                  #Somewhat deprecated. Does not support printing STRUCT. Not great output.
+                                  #Prefer fmt.Print[ln]().
