--- a/Languages/Go/go.language.txt
+++ b/Languages/Go/go.language.txt
@@ -6,7 +6,7 @@
 
 
 TODO:
-  - https://golang.org/ref/spec#Packages
+  - https://golang.org/ref/spec#Package_unsafe
   - go back to https://golang.org/doc/effective_go.html#control-structures
   - https://golang.org/ref/mem
   - https://golang.org/doc/faq
@@ -21,107 +21,6 @@ TODO:
   - go through to_learn.txt
 
 VERSION ==>                       #1.14.4
-
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
-                                            )==:             BUILD             :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-ENVVAR GOROOT                     #Global go directory.
-                                  #Contains go|gofmt executable
-                                  #Def: /usr/local/go
-
-go build FILE.go                  #Compile FILE.go to executable FILE
-go build [DIR]                    #Compile DIR/*.go to executable DIRNAME
-                                  #Must all be from same PACKAGE
-                                  #Def DIR: .
-
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
-                                            )==:              ENV              :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-go env                            #Prints all GO*|CGO* ENVVARs, and also GCC-related ENVVARs
-                                  #After default value resolution
-go env "ENVVAR",...               #Print value
-go env -w ENVVAR=VAL,...          #Sets value
-go env -u ENVVAR                  #Unsets value
-
--json                             #Prints as JSON
-
-ENVVAR GOENV                      #Where go env -w|-u ... is stored
-                                  #Def: ~/.config/go/env
-
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
-                                            )==:            MODULE             :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-MODULE ==>                        #Group of PACKAGEs
-
-"[NAMESPACE/]MODULE"              #"MODULE_PATH", identifier of the MODULE
-                                  #NAMESPACE is location among:
-                                  #  - standard library STR or ""
-                                  #  - PATH, relative to:
-                                  #     - $PWD[/...]
-                                  #     - $GOROOT/src
-                                  #     - $GOPATH/src
-                                  #  - URI
-
-go.mod                            #File containing line-wise directives (below)
-                                  #Location determines the module's root directory:
-                                  #  - any subdirectory's PACKAGE is included
-                                  #  - subdirectory with another go.mod are excluded
-//COMMENT                         #
-module MODULE_PATH                #Declares MODULE_PATH
-go VERSION                        #Declares Go version
-
-go mod init "MODULE_PATH"         #Creates ./go.mod
-
-go install ["MODULE_PATH"|DIR]    #Downloads MODULE and installs as binary in GOBIN
-                                  #If DIR (def: '.'), searches in DIR
-GOBIN                             #By priority:
-                                  #  - ENVVAR GOBIN
-                                  #  - FIRST_GO_PATH/bin, where FIRST_GO_PATH is ENVVAR GOPATH's first path
-                                  #  - HOME/go/bin/MODULE
-                                  #     - HOME is $HOME on Unix, %USERPROFILE% on Windows
-
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
-                                            )==:            PACKAGE            :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-package PACKAGE                   #Declare which PACKAGE it belongs
-                                  #Must be first statement
-                                  #All *.go within same DIR must have same PACKAGE
-                                  #Recommended lowercase
-
-package main                      #CLI entry point (as opposed to programmatic)
-                                  #Must have a main FUNC
-
-"MODULE_PATH[/PATH]"              #"IMPORT_PATH", identifier of a PACKAGE
-
-EXPORT ==>                        #Any top-level variable whose variable name starts with uppercase letter is exported
-                                  #Recommended not to namespace their variable name, since PACKAGE already namespaces them
-
-import "IMPORT_PATH"              #Import PACKAGE as a top-level variable named PACKAGE
-                                  #Must be available in GOBIN
-import (
-  "..."
-  ...
-)                                 #Same as several import "..."
 
 
                                              /=+===============================+=\
@@ -979,3 +878,124 @@ cap(CHAN)->UINT                   #Buffere size
 print[ln](VAL,...)                #Prints on stderr, space|newline-separated
                                   #Somewhat deprecated. Does not support printing STRUCT. Not great output.
                                   #Prefer fmt.Print[ln]().
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:            MODULE             :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+MODULE ==>                        #Group of PACKAGEs
+
+"[NAMESPACE/]MODULE"              #"MODULE_PATH", identifier of the MODULE
+                                  #NAMESPACE is location among:
+                                  #  - standard library: none
+                                  #  - PATH, relative to:
+                                  #     - $PWD[/...]
+                                  #     - $GOROOT/src
+                                  #     - $GOPATH/src
+                                  #  - URI
+
+go.mod                            #File containing line-wise directives (below)
+                                  #Location determines the module's root directory:
+                                  #  - any subdirectory's PACKAGE is included
+                                  #  - subdirectory with another go.mod are excluded
+//COMMENT                         #
+module MODULE_PATH                #Declares MODULE_PATH
+go VERSION                        #Declares Go version
+
+go mod init "MODULE_PATH"         #Creates ./go.mod
+
+go install ["MODULE_PATH"|DIR]    #Downloads MODULE and installs as binary in GOBIN
+                                  #If DIR (def: '.'), searches in DIR
+GOBIN                             #By priority:
+                                  #  - ENVVAR GOBIN
+                                  #  - FIRST_GO_PATH/bin, where FIRST_GO_PATH is ENVVAR GOPATH's first path
+                                  #  - HOME/go/bin/MODULE
+                                  #     - HOME is $HOME on Unix, %USERPROFILE% on Windows
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:            PACKAGE            :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+package PACKAGE                   #Declare:
+                                  #  - which PACKAGE file belongs
+                                  #  - package's default import VAR
+                                  #Must be first statement
+                                  #All *.go within same DIR must have same PACKAGE
+                                  #Recommended lowercase
+
+package main                      #CLI entry point (as opposed to programmatic)
+                                  #Must have a main FUNC
+
+"MODULE_PATH[/PATH]"              #"IMPORT_PATH", identifier of a PACKAGE
+
+EXPORT ==>                        #Any top-level variable whose variable name starts with uppercase letter is exported
+                                  #Recommended not to namespace their variable name, since package already namespaces them
+
+import [PACKAGE] "IMPORT_PATH"    #Import package's exported variables PACKAGE.VAR ("qualified identifier").
+import                            #Available as top-level variable PACKAGE:
+ ([PACKAGE] "IMPORT_PATH";...)    #  - def: package PACKAGE
+                                  #  - if _, meant only for side-effects
+                                  #  - if ., make all exported variables available without any namespace
+                                  #     - recommended only in automated tests
+                                  #Waits for package to initialize
+                                  #Package cycles not allowed
+                                  #Idempotent: import is cached and side-effects are not redone
+                                  #Must be available in GOBIN
+
+func init() { ... }               #Called when file gets imported, after package scope declarations done.
+                                  #Meant for import-time side-effects
+                                  #Can be several per file|package
+                                  #Cannot refer to it as FUNC call|value
+
+INITIALIZATION ORDER ==>          #If a top-level declaration depends on another inside same package, it waits for it
+                                  #  - even if different file
+                                  #  - even if before it in line order
+                                  #Package initialization order:
+                                  #  - filewise: depends on how it was compiled:
+                                  #     - FILE...: arguments order
+                                  #     - DIR: filename alphabetical order
+                                  #  - linewise
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:             BUILD             :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+ENVVAR GOROOT                     #Global go directory.
+                                  #Contains go|gofmt executable
+                                  #Def: /usr/local/go
+
+go build FILE.go                  #Compile FILE.go to executable FILE
+go build [DIR]                    #Compile DIR/*.go to executable DIRNAME
+                                  #Must all be from same PACKAGE
+                                  #Def DIR: .
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:              ENV              :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+go env                            #Prints all GO*|CGO* ENVVARs, and also GCC-related ENVVARs
+                                  #After default value resolution
+go env "ENVVAR",...               #Print value
+go env -w ENVVAR=VAL,...          #Sets value
+go env -u ENVVAR                  #Unsets value
+
+-json                             #Prints as JSON
+
+ENVVAR GOENV                      #Where go env -w|-u ... is stored
+                                  #Def: ~/.config/go/env
